# analista_procedimientos

./: .gitignore  README.md  check_import.py  debug_retrieval.py  diagnostic.py  main.py  main_old.py  prueba.py  pyproject.toml  requirements.txt  setup_project.py
app/: services_factory.py
config/: settings.py
docs_temp/: README.md
docstore_index/: 01a02e88-1445-4658-969e-3dad07589a9b  01ea533d-07f6-414c-baa7-4fa22550c618  038e4e9e-e8a5-48fe-a4cf-f35408c77719  03bb636d-8bb6-455e-ba42-ffc0ad2c487b  04942604-63c7-4bff-87f5-d7a4b66570a0  087ab1c9-26cb-436b-9105-d65407f8f386  098c2d19-c45c-4581-90d8-221126b2fa27  0b82b0ca-48cb-4ca1-acd2-2128f01ce978  0c6cf973-73a5-495a-b0ab-d8825d8e161c  124e03e7-b34b-4189-8c85-749a4f410c3b  12533d6d-7bf1-43c1-a6c1-641c5a9827d6  1e279484-e7cd-4596-a507-8b2287ff5755  1e46b198-9e5f-406a-9d48-4181eff520e8  20b44d4d-6f3e-4f3d-8baa-2ff85b2a415a  20db8ecf-079d-4cc4-a44c-71c1fa00a4e8  20f314d1-fb04-4f0c-ad8a-452d5a86f634  22f9edca-e965-4654-b414-6b1d6e8129f0  24a07ddc-918f-40d0-bfa2-32684d18c086  27131cf1-3eea-4d5e-b2eb-dd826c753ef5  2ad9f24e-9754-4100-b082-6c3e5f9d4a6b  2c179b42-ccbb-4d7c-917d-94ac37af217b  2e716d55-7134-40a2-802f-4052fdbd1684  303254e8-3901-4560-8790-440a77cc3b03  31cdd810-fc42-402f-89b7-8820b298f7ba  3333571b-877e-4196-9c09-cefe77570b37  38455da4-9b19-4ba2-8194-1af5560d0519  38c83ee3-c520-4aab-a218-09c09bdb52de  39e22864-fea4-498b-932c-cff9f546544e  3ac906c0-cd6d-4a35-886e-2dda4929ddd3  3ca7ce1a-6b22-4bfb-8015-71c7326e49af  3e455e48-9491-42cc-a7a0-d7c3c8d4ba0e  413ef55e-b775-4a56-819e-f6ebc0fad787  (+63 more)
faiss_index/: index.pkl  (+1 more)
(+39 files in other folders)
